Fix: sidebar spacing and team

--- a/static_src/scss/blocks/_sidebar.scss
+++ b/static_src/scss/blocks/_sidebar.scss
@@ -1,3 +1,7 @@
 .sidebar {
-    --flow-space: 2em;
+    --flow-space: 2rem;
+
+    h3 {
+        font-size: get-size('500');
+    }
 }
